--- a/trollpy/templates/add_smack.jinja2
+++ b/trollpy/templates/add_smack.jinja2
@@ -2,6 +2,7 @@
 {% block body %}
 {% if user.admin %}
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
         <p>
             <label for="statement">Alexa will say this: </label>
             <input type="text" name="statement"/>
